Fix wrapper height on mobile bis

--- a/src/assets/style/molecules/_wrapper.sass
+++ b/src/assets/style/molecules/_wrapper.sass
@@ -2,11 +2,11 @@
   height: 100%
   margin: 0 10%
 
-  +phone
-    height: auto
-    margin: 0
-
 .about-wrapper
   opacity: 0
   +translate3d(0, 100px, 0)
- 
+
+.work-wrapper
+  +phone
+    height: auto
+    margin: 0
